--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -3,6 +3,7 @@ body {
     margin: 0 auto;
     font: normal 16px/24px "Lucida Grande", Arial, Ubuntu, sans-serif;
     padding: 20px 20px 0;
+    background-color: #272B30;
 }
 
 .link-login{
