--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -1,11 +1,37 @@
 body {
     width: 960px;
     margin: 0 auto;
+    height:100%;
     font: normal 16px/24px "Lucida Grande", Arial, Ubuntu, sans-serif;
     padding: 20px 20px 0;
     background-color: #272B30;
 }
 
-.link-login{
-	float: right;
+#wrapper {
+	min-height:100%;
+	position:relative;
+}
+
+#header {
+	padding:10px;
+}
+
+#content {
+	padding-bottom:100px; /* Height of the footer element */
+}
+
+#footer {
+	width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+}
+
+#share-buttons img {
+width: 35px;
+padding: 5px;
+border: 0;
+box-shadow: 0;
+display: inline;
 }
