--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -1,12 +1,3 @@
-body {
-    width: 960px;
-    margin: 0 auto;
-    height:100%;
-    font: normal 16px/24px "Lucida Grande", Arial, Ubuntu, sans-serif;
-    padding: 20px 20px 0;
-    background-color: #272B30;
-}
-
 #wrapper {
 	min-height:100%;
 	position:relative;
@@ -29,7 +20,8 @@ body {
 }
 
 #share-buttons img {
-width: 35px;
+width: 40px;
+height: 40px;
 padding: 5px;
 border: 0;
 box-shadow: 0;
