--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -8,7 +8,7 @@
 }
 
 #content {
-	padding-bottom:100px; /* Height of the footer element */
+	padding-bottom:190px; /* Height of the footer element */
 }
 
 #footer {
@@ -26,4 +26,9 @@ padding: 5px;
 border: 0;
 box-shadow: 0;
 display: inline;
+}
+
+.form-boot {
+	margin-left: 20%;
+	margin-right: 20%;
 }
