--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -28,7 +28,11 @@ box-shadow: 0;
 display: inline;
 }
 
-.form-boot {
+.form-boot-20 {
 	margin-left: 20%;
 	margin-right: 20%;
+}
+.form-boot-40 {
+	margin-left: 40%;
+	margin-right: 40%;
 }
