--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -1,25 +1,25 @@
-#wrapper {
+.wrapper {
 	min-height:100%;
 	position:relative;
 }
 
-#header {
-	padding:10px;
+.header {
+	
 }
 
-#content {
-	padding-bottom:190px; /* Height of the footer element */
+.content {
+	padding-bottom:130px; /* Height of the footer element */
 }
 
-#footer {
+.footer {
 	width:100%;
-	height:100px;
+	height:130px;
 	position:absolute;
 	bottom:0;
 	left:0;
 }
 
-#share-buttons img {
+.share-buttons img {
 width: 40px;
 height: 40px;
 padding: 5px;
@@ -28,10 +28,16 @@ box-shadow: 0;
 display: inline;
 }
 
-.form-boot-20 {
+.centered-20 {
 	margin-left: 20%;
 	margin-right: 20%;
 }
+
+.header-2 {
+	margin-top: 5%;
+	margin-bottom: 4%;
+}
+
 .form-boot-40 {
 	margin-left: 40%;
 	margin-right: 40%;
