try {}catch{} adicionado na inscricao

--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -38,6 +38,11 @@ display: inline;
 	margin-bottom: 4%;
 }
 
+.header-3 {
+	margin-top: 5%;
+	margin-bottom: 2%;
+}
+
 .form-boot-40 {
 	margin-left: 40%;
 	margin-right: 40%;
