--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -8,12 +8,12 @@
 }
 
 .content {
-	padding-bottom:130px; /* Height of the footer element */
+	padding-bottom:133px; /* Height of the footer element */
 }
 
 .footer {
 	width:100%;
-	height:130px;
+	height:133px;
 	position:absolute;
 	bottom:0;
 	left:0;
@@ -47,3 +47,10 @@ display: inline;
 	margin-left: 40%;
 	margin-right: 40%;
 }
+
+.ident {
+	text-indent: 3em;
+}
+
+@font-face { font-family: fireye; src: url('/oxe/estaticos/source/font/fireye.ttf'); } 
+@font-face { font-family: bitsumishi; src: url('/oxe/estaticos/source/font/bitsumishi.ttf'); }
