--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -1,6 +1,6 @@
 .wrapper {
-	min-height:100%;
-	position:relative;
+	min-height: 100%;
+	position: relative;
 }
 
 .header {
@@ -8,15 +8,54 @@
 }
 
 .content {
-	padding-bottom:133px; /* Height of the footer element */
+	padding-bottom: 133px; /* Height of the footer element */
 }
 
 .footer {
-	width:100%;
-	height:133px;
-	position:absolute;
-	bottom:0;
-	left:0;
+	width: 100%;
+	height: 133px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+.regras {
+	margin-bottom: 5%;
+	background-color: white;
+	color: #005C83;
+}
+
+.regras h3 {
+	padding-top: 3%;
+	padding-bottom: 2%;
+}
+
+.regras embed {
+	border: 2px solid gray;
+	width: 100%;
+	height: 300px;
+}
+
+.regras div {
+	padding-bottom: 2%;
+}
+
+.regras div form div {
+	margin-left: 2%;
+}
+
+.regras div form div {
+
+}
+
+.fonte-oxe {
+	font-family: fireye; 
+	color: #005C83;
+}
+
+.fonte-nome {
+	font-family: bitsumishi; 
+	color: #898987;
 }
 
 .share-buttons img {
@@ -50,10 +89,6 @@ display: inline;
 
 .ident {
 	text-indent: 3em;
-}
-
-.cne {
-	margin-left: 4%;
 }
 
 @font-face { font-family: fireye; src: url('/oxe/estaticos/source/font/fireye.ttf'); } 
