--- a/estaticos/estilo.css
+++ b/estaticos/estilo.css
@@ -8,12 +8,12 @@
 }
 
 .content {
-	padding-bottom: 133px; /* Height of the footer element */
+	padding-bottom: 113px; /* Height of the footer element */
 }
 
 .footer {
 	width: 100%;
-	height: 133px;
+	height: 113px; /* Height of the footer element */
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -50,12 +50,14 @@
 
 .fonte-oxe {
 	font-family: fireye; 
-	color: #005C83;
+	/*color: #005C83;*/
+	color: #31849B;
 }
 
 .fonte-nome {
 	font-family: bitsumishi; 
-	color: #898987;
+	/*color: #898987;*/
+	color: #808080;
 }
 
 .share-buttons img {
